--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
     <div class="models-wrapper fade-in-element">
       <div class="info-box">
         <p class="info-item">新用户注册免费调用<span class="info-highlight">50000次</span></p>
-        <p class="info-item">加入QQ群聊每天送免费额度 <span class="info-highlight qq-group" onclick="copyText('838132984')" title="点击复制QQ群号">838132984</span></p>
+        <p class="info-item">加入QQ群聊 <span class="info-highlight qq-group" onclick="copyText('636149148')" title="点击复制QQ群号">636149148</span></p>
       </div>
 
       <section class="models-section">
